--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "SOGE-UTEST"]
 	path = SOGE-UTEST
 	url = https://github.com/GaikanStudio/SOGE-UTEST.git
+[submodule "3rdparty/CLI11/CLI11"]
+	path = 3rdparty/CLI11/CLI11
+	url = https://github.com/CLIUtils/CLI11.git
