--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "3rdparty/stb/stb"]
 	path = 3rdparty/stb/stb
 	url = https://github.com/nothings/stb.git
+[submodule "3rdparty/jolt/jolt"]
+	path = 3rdparty/jolt/jolt
+	url = https://github.com/jrouwe/JoltPhysics.git
